Static/CSS/styles.css
.card {
    margin-bottom: 1.2em;
}

.card:hover {
    border-color: #246015;
    box-shadow: 2px 2px #dedddd;
}

.modal-header {
    border-bottom: 0px;
}

.counter {
    font-size: 0.5em;
    margin-left: 1.2em;
    font-weight: bold;
}

header {
    margin-bottom: 45px;
}

.price {
    color: seagreen;
    font-weight: bold;    
}

.price:before {
    content: '$';
}

.checkout {
    text-transform: uppercase;
    font-size: 0.8em;
    font-weight: bold;
}

.add:hover {
    background-color: deepskyblue;
    border-color: deepskyblue;
}

.increment,
.decrement{
        height: 24px;
        width: 24px;
        border: 1px solid #222;
        text-align: center;
        box-sizing: border-box;
        border-radius: 50%;
        text-decoration: none;
        color: #222;
        font-size: 24px;
        line-height: 22px;
        display: inline-block;
        cursor: pointer;             
    }

    .stepper-input{
        display: flex;
        display: -webkit-flex;
        color: #222;
        max-width: 120px;
        margin: 10px auto;
        text-align: center;
    }

    .book{
        margin-bottom: 10px;
    width: 200px;
    }

.decrement:hover, 
.increment:hover {
    color: green;  
}

.decrement:active, 
.increment:active {    
    background-color: green; 
    color: white;  
}


.quantity{
        height: 24px;
        width: 48px;
        text-align: center;
        margin: 0 12px;
        border-radius: 2px;
        border: 1px solid #222;
        
}

